--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,5 +13,14 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Build with Maven
-      run: mvn package --file pom.xml
+      run: |
+        mvn clean package
+        bash <(curl -s https://codecov.io/bash)
+
+    - name: Deploy to GitHub Package Registry
+      env:
+        GITHUB_USERNAME: x-access-token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn --settings settings.xml -Pgithub -DskipTests clean deploy
