Set up GitHub actions

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
       env:
         GITHUB_USERNAME: x-access-token
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: mvn --settings settings.xml -Pgithub -DskipTests clean deploy
+      run: mvn --settings settings.xml -Pgithub clean deploy
