--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,19 @@
 		<java.version>1.8</java.version>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>github</id>
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub kezhenxu94 Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/kezhenxu94/cache-lite</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
