--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.github.kezhenxu94</groupId>
     <artifactId>cache-lite</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
 
     <modelVersion>4.0.0</modelVersion>
 
