--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build with Maven
         run: |
-          mvn clean package
+          ./mvnw --batch-mode clean package
           bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}
       - name: Deploy to GitHub Package Registry
-        run: mvn --settings settings.xml -Pgithub clean deploy
+        run: ./mvnw --batch-mode --settings settings.xml -Pgithub clean deploy
