--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.github.kezhenxu94</groupId>
   <artifactId>cache-lite</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -135,7 +135,6 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 </project>
