--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>io.github.kezhenxu94</groupId>
   <artifactId>cache-lite</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -17,7 +17,7 @@
     <connection>scm:git:git://github.com/kezhenxu94/cache-lite.git</connection>
     <developerConnection>scm:git:git@github.com:kezhenxu94/cache-lite.git</developerConnection>
     <url>https://github.com/kezhenxu94/cache-lite</url>
-    <tag>HEAD</tag>
+    <tag>v0.1.0</tag>
   </scm>
 
   <profiles>
