--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>io.github.kezhenxu94</groupId>
   <artifactId>cache-lite</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.0-SNAPSHOT</version>
 
   <modelVersion>4.0.0</modelVersion>
 
