--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+  <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.kezhenxu94</groupId>
   <artifactId>cache-lite</artifactId>
   <version>0.2.0-SNAPSHOT</version>
 
-  <modelVersion>4.0.0</modelVersion>
+  <name>cache-lite</name>
+  <description>An extremely light-weight cache framework for Kotlin</description>
+  <url>https://github.com/kezhenxu94/cache-lite</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <kotlin.version>1.3.71</kotlin.version>
-    <java.version>1.8</java.version>
-  </properties>
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Zhenxu Ke</name>
+      <email>kezhenxu94@163.com</email>
+    </developer>
+  </developers>
 
   <scm>
     <connection>scm:git:git://github.com/kezhenxu94/cache-lite.git</connection>
@@ -19,6 +32,12 @@
     <url>https://github.com/kezhenxu94/cache-lite</url>
     <tag>HEAD</tag>
   </scm>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <kotlin.version>1.3.71</kotlin.version>
+    <java.version>1.8</java.version>
+  </properties>
 
   <profiles>
     <profile>
