--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <developer>
       <name>Zhenxu Ke</name>
       <email>kezhenxu94@163.com</email>
+      <url>https://github.com/kezhenxu94</url>
     </developer>
   </developers>
 
