--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.github.kezhenxu94</groupId>
   <artifactId>cache-lite</artifactId>
-  <version>0.1.3-SNAPSHOT</version>
+  <version>0.1.3</version>
 
   <name>cache-lite</name>
   <description>An extremely light-weight cache framework for Kotlin</description>
