--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.github.kezhenxu94</groupId>
   <artifactId>cache-lite</artifactId>
-  <version>0.1.6-SNAPSHOT</version>
+  <version>0.1.6</version>
 
   <name>cache-lite</name>
   <description>An extremely light-weight cache framework for Kotlin</description>
@@ -30,7 +30,7 @@
     <connection>scm:git:git://github.com/kezhenxu94/cache-lite.git</connection>
     <developerConnection>scm:git:git@github.com:kezhenxu94/cache-lite.git</developerConnection>
     <url>https://github.com/kezhenxu94/cache-lite</url>
-    <tag>v0.1.3</tag>
+    <tag>v0.1.6</tag>
   </scm>
 
   <issueManagement>
@@ -57,10 +57,6 @@
     <kotlin.version>1.3.71</kotlin.version>
     <junit.version>4.12</junit.version>
     <java.version>1.8</java.version>
-
-    <gpg.executable>gpg</gpg.executable>
-    <gpg.keyname>${env.GPG_KEY_NAME}</gpg.keyname>
-    <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
   </properties>
 
   <profiles>
@@ -81,6 +77,12 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -247,6 +249,7 @@
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
           <mavenExecutorId>forked-path</mavenExecutorId>
+          <arguments>-DskipTests</arguments>
         </configuration>
       </plugin>
     </plugins>
